<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="20dp"
    tools:context=".ui.ShopActivity">

    <ImageView
        android:id="@+id/shopItemImageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/black_top"
        android:scaleType="fitCenter"
        android:src="@drawable/black_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shopItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/black_turtleneck_top"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopItemImageView" />

    <TextView
        android:id="@+id/discountPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_42"
        android:textColor="@color/purple"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopItemName" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/_62"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/discountPrice"
        app:layout_constraintStart_toEndOf="@id/discountPrice"
        app:layout_constraintTop_toTopOf="@id/discountPrice" />

    <View
        android:id="@+id/divideLineTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/lineColor"
        app:layout_constraintBottom_toTopOf="@id/itemRatePoints"
        app:layout_constraintTop_toBottomOf="@id/discountPrice" />

    <TextView
        android:id="@+id/itemRatePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_points_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="7dp"
        android:text="@string/_4_5"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divideLineTop" />

    <TextView
        android:id="@+id/itemRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/very_good"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/itemRatePoints"
        app:layout_constraintStart_toEndOf="@id/itemRatePoints"
        app:layout_constraintTop_toTopOf="@id/itemRatePoints" />

    <TextView
        android:id="@+id/itemReviewers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/_49_reviews"
        android:textColor="@color/purple"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/itemRateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/itemRateText" />

    <View
        android:id="@+id/divideLineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="15dp"
        android:background="@color/lineColor"
        app:layout_constraintTop_toBottomOf="@id/itemRatePoints" />

    <TextView
        android:id="@+id/itemDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divideLineBottom" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        android:text="@string/description_example"
        android:textColor="@color/gray"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/buyNowButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemDescriptionTitle" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGray"
        android:padding="10dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buyNowButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyNowButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:padding="10dp"
        android:text="@string/buy_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addToCartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>