<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SubmitActivity">

    <View
        android:id="@+id/submitFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:background="@color/lineColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divideLine"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/confirmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm"
        android:textColor="@color/purple"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divideLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="20dp"
        android:background="@color/lineColor"
        app:layout_constraintTop_toBottomOf="@id/confirmTitle" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/price"
        android:textColor="@color/purple"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/submitFrame"
        app:layout_constraintBottom_toTopOf="@id/priceTextView"
        app:layout_constraintStart_toStartOf="@id/submitFrame" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/priceTitle" />

    <TextView
        android:id="@+id/fullNameOnCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/full_name_on_card"
        android:textColor="@color/purple"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fullNameTextView"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/priceTextView" />

    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="18dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/fullNameOnCardTitle" />

    <TextView
        android:id="@+id/creditCardNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/credit_card_number"
        android:textColor="@color/purple"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardNumberTextView"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/fullNameTextView" />

    <TextView
        android:id="@+id/cardNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/creditCardNumberTitle" />

    <TextView
        android:id="@+id/expirationDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/expiration_date"
        android:textColor="@color/purple"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/cardNumberTextView" />

    <TextView
        android:id="@+id/expirationDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="18dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/expirationDateTitle" />

    <TextView
        android:id="@+id/cvvCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/cvv_code"
        android:textColor="@color/purple"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/submitFrame"
        app:layout_constraintTop_toBottomOf="@id/expirationDateTextView" />

    <TextView
        android:id="@+id/cvvCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/cvvCodeTitle"
        app:layout_constraintTop_toBottomOf="@id/cvvCodeTitle" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:padding="15dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>